# LinkedList_OpenMP

./: CMakeLists.txt  README.md  a.out  linkedList.c  linkedList.h  main.c  makefile  run_tests.sh  temp_result.txt  testseq.out
test_results/: result1.txt  result10.txt  result11.txt  result12.txt  result13.txt  result14.txt  result15.txt  result2.txt  result3.txt  result4.txt  result5.txt  result6.txt  result7.txt  result8.txt  result9.txt
tests/: test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test2.txt  test3.txt  test6.txt  test8.txt  test9.txt
